Add fade endpoint
